Removendo comentarios no like-btn

--- a/static/style.css
+++ b/static/style.css
@@ -174,8 +174,7 @@ a:hover {
 
 .like-btn {
   background: none;
-  border: none; /* Para remover a borda padrão do botão, se houver /
-padding: 0; / Para remover qualquer espaçamento interno padrão */
+  border: none;
 }
 
 .resposta-numero {
