Mod - Css ajustavel conforme a tela

--- a/static/style.css
+++ b/static/style.css
@@ -252,7 +252,7 @@ a:hover {
 .nav-footer nav {
   display: flex;
   justify-content: center;
-  gap: 36px;
+  gap: clamp(15px, 6vw, 36px);
   width: 100%;
 }
 
