Criando um css para o textarea do verpost

--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -56,7 +56,7 @@
 
       <hr />
 
-      <div class="container_chat_bot">
+      <div class="container_chat_bot chat-comment">
         <div class="container-chat-options">
           <div class="chat">
             <form
@@ -103,6 +103,7 @@
           </div>
         </div>
       </div>
+
       <hr />
 
       <h3>Comentários:</h3>
