ERRO - Removendo o nome dos usuarios do perfil

--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -15,7 +15,7 @@
     </div>
     <div class="container">
       <div class="perfil-info">
-        <p><strong>Nome:</strong> {{ usuario.nome }} {{ usuario.sobrenome }}</p>
+        <p><strong>Nome:</strong> {{ usuario.apelido }}</p>
         <p><strong>Idade:</strong> {{ usuario.idade }}</p>
         {% if is_owner %}
         <a
