--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -29,7 +29,7 @@
 
       <hr />
 
-      <h2>Posts</h2>
+      <h2>Opiniões do Usuario</h2>
 
       {% if posts %} {% for item in posts %} {% set post = item['post'] %} {%
       set tempo = item['tempo'] %} {% set likes_count = item['likes_count'] %}
