--- a/static/style.css
+++ b/static/style.css
@@ -814,6 +814,62 @@ button:active {
   }
 }
 
+.welcome-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 260px;
+  padding: 20px 1px;
+  margin: 10px auto 30px auto;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 0 10px 15px -3px rgba(255 255 255 / 0.4),
+    0 4px 6px -4px rgba(255 255 255 / 0.4);
+  border-radius: 10px;
+  background: linear-gradient(45deg, #111111ea 0%, #ff0000 100%);
+  color: white;
+  user-select: none;
+}
+
+.welcome-card__content {
+  padding: 20px;
+}
+
+.welcome-card__title {
+  font-weight: 800;
+  text-transform: uppercase;
+  margin-top: -15px;
+  font-size: 25px;
+  letter-spacing: 1px;
+}
+
+.welcome-card__description {
+  margin-top: 10px;
+  font-size: 14px;
+  line-height: 1.3;
+  color: white;
+}
+
+.welcome-card__button {
+  border: none;
+  outline: none;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 0.75rem;
+  padding: 0.9rem 2.5rem;
+  background-color: rgb(0, 82, 189);
+  border-radius: 0.5rem;
+  width: 90%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.welcome-card__button:hover {
+  background-color: rgb(0, 52, 120);
+}
+
 @media (max-width: 600px) {
   .container {
     padding: 10px 12px;
