--- a/static/style.css
+++ b/static/style.css
@@ -815,13 +815,13 @@ button:active {
 }
 
 .welcome-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
   width: 260px;
   padding: 20px 1px;
-  margin: 10px auto 30px auto;
   text-align: center;
   cursor: pointer;
   box-shadow: 0 10px 15px -3px rgba(255 255 255 / 0.4),
@@ -830,8 +830,8 @@ button:active {
   background: linear-gradient(45deg, #111111ea 0%, #ff0000 100%);
   color: white;
   user-select: none;
+  margin: 0;
 }
-
 .welcome-card__content {
   padding: 20px;
 }
