--- a/static/style.css
+++ b/static/style.css
@@ -845,12 +845,13 @@ button:active {
   font-weight: 800;
   text-transform: uppercase;
   margin-top: -15px;
+  margin-bottom: 20px;
   font-size: 25px;
   letter-spacing: 1px;
 }
 
 .welcome-card__description {
-  margin-top: 10px;
+  margin-top: 20px;
   font-size: 14px;
   line-height: 1.3;
   color: white;
