--- a/templates/trending.html
+++ b/templates/trending.html
@@ -39,7 +39,7 @@
       "
     >
       <img src="static/images/12.png" alt="Ícone" class="bubble-img" />
-      Opiniões mais virais do dia:
+      Opiniões mais virais:
     </h3>
 
     <div class="container">
