--- a/static/style.css
+++ b/static/style.css
@@ -895,6 +895,35 @@ button:active {
   background-color: rgb(0, 52, 120);
 }
 
+.button-name {
+  align-items: center;
+  appearance: none;
+  background-color: #ff0000;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(163, 0, 0, 0.2) 0 2px 4px,
+    rgba(216, 0, 0, 0.15) 0 7px 13px -3px, #000000 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-flex;
+  height: 28px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 12px;
+}
+
 @media (max-width: 600px) {
   .container {
     padding: 10px 12px;
