--- a/templates/register.html
+++ b/templates/register.html
@@ -55,7 +55,7 @@
           <div style="margin-bottom: 10px">
             <input
               id="apelido"
-              placeholder="Apelido (opcional)"
+              placeholder="Apelido *Recomendação: Não colocar nome*"
               class="input"
               name="apelido"
               type="text"
@@ -64,7 +64,14 @@
               oninput="validarApelido(this)"
             />
 
-            <div style="margin-top: 8px">
+            <div
+              style="
+                margin-top: 8px;
+                display: flex;
+                align-items: center;
+                gap: 5px;
+              "
+            >
               <input
                 type="checkbox"
                 id="apelidoPadraoCheckbox"
