Retoques no checkbox 2

--- a/templates/register.html
+++ b/templates/register.html
@@ -55,7 +55,7 @@
           <div style="margin-bottom: 10px">
             <input
               id="apelido"
-              placeholder="Apelido *Recomendação: Não colocar nome*"
+              placeholder="Apelido (Exibido para outros usuarios)"
               class="input"
               name="apelido"
               type="text"
